[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content-pipeline"
version = "1.0.0"
description = "LangGraph-based content generation pipeline using Claude + Google Workspace"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "langgraph>=0.2.0",
    "anthropic>=0.28.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "google-api-python-client>=2.130.0",
    "google-auth>=2.29.0",
    "google-auth-httplib2>=0.2.0",
    "apscheduler>=3.10.4",
    "pypdf>=4.2.0",
    "striprtf>=0.0.26",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
    "lxml>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
